--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
   <div class="sidebar">
     <h2>Upcoming Shows</h2>
-
       <ul>
         <li>Feb 1st: Toronto, Canada</li>
         <li>Feb 15th: Portland, Oregon</li>
@@ -19,13 +18,26 @@
         <li>March 14th: Austin, Texas</li>
         <li>May 2nd: New Orleans, Louisiana</li>
       </ul>
+  </div>
+    <p>Prior to forming My Morning Jacket, James was the vocalist and guitarist of Month of  Sundays, currently known as Mont de Sundua. As the vocalist, frontman, producer and lead songwriter for My Morning Jacket, James has been instrumental in defining the sound of the band. He was given an "Esky" for best songwriter in Esquire's 2006 Esky Music Awards in the April issue.James typically plays rhythm guitar, acoustic guitar, and occasional lead guitar on My Morning Jacket songs. He played the role of the band leader in the Bob Dylan biopic I'm Not There, singing the song "Going to Acapulco", with Calexico as his backing band, which was featured on the soundtrack of the film.</p>
 
+  <div class="float">
+    <img src="img/jimjames1.jpg" alt="jimjames" width="600" height="350">
   </div>
 
-    <p>Prior to forming My Morning Jacket, James was the vocalist and guitarist of Month of  Sundays, currently known as Mont de Sundua. As the vocalist, frontman, producer and lead songwriter for My Morning Jacket, James has been instrumental in defining the sound of the band. He was given an "Esky" for best songwriter in Esquire's 2006 Esky Music Awards in the April issue.</p>
+  <div class="sidebar2">
+    <h2>More Shows</h2>
+      <ul>
+        <li>May 22nd: Keywest, Florida</li>
+        <li>June 1st: Raliegh, North Carolina</li>
+        <li>June 19th: Virginia Beach, Virginia</li>
+        <li>June 30th: Brooklyn, New York</li>
+        <li>July 2nd: Buffalo, New York</li>
+      </ul>
+  </div>
+     <p>Rolling Stone listed James among their "20 New Guitar Gods" along with fellow My Morning Jacket guitarist Carl Broemel. In 2008, James, along with former My Morning Jacket guitarist and cousin Johnny Quaid, formed Removador Recordings and Solutions record label. The label, as described on its website, functions "on the simple principal of yielding the highest annual percentage of aural joy back into the hearts and minds of investors and shareholders with ease and convenience".[5] He contributed vocals on The Decemberists' 2009 album The Hazards of Love.</p>
 
-
-    <p>James typically plays rhythm guitar, acoustic guitar, and occasional lead guitar on My Morning Jacket songs. He played the role of the band leader in the Bob Dylan biopic I'm Not There, singing the song "Going to Acapulco", with Calexico as his backing band, which was featured on the soundtrack of the film. Rolling Stone listed James among their "20 New Guitar Gods" along with fellow My Morning Jacket guitarist Carl Broemel. In 2008, James, along with former My Morning Jacket guitarist and cousin Johnny Quaid, formed Removador Recordings and Solutions record label. The label, as described on its website, functions "on the simple principal of yielding the highest annual percentage of aural joy back into the hearts and minds of investors and shareholders with ease and convenience".[5] He contributed vocals on The Decemberists' 2009 album The Hazards of Love.</p>
-
+  <h1>THE JIM JAMES BAND</h1>
+  
 </body>
 </html>
