add columns and additional html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
 
   <div class="sidebar2">
-    <h2>More Shows</h2>
+    <h2>More Shows...</h2>
       <ul>
         <li>May 22nd: Keywest, Florida</li>
         <li>June 1st: Raliegh, North Carolina</li>
@@ -35,9 +35,20 @@
         <li>July 2nd: Buffalo, New York</li>
       </ul>
   </div>
-     <p>Rolling Stone listed James among their "20 New Guitar Gods" along with fellow My Morning Jacket guitarist Carl Broemel. In 2008, James, along with former My Morning Jacket guitarist and cousin Johnny Quaid, formed Removador Recordings and Solutions record label. The label, as described on its website, functions "on the simple principal of yielding the highest annual percentage of aural joy back into the hearts and minds of investors and shareholders with ease and convenience".[5] He contributed vocals on The Decemberists' 2009 album The Hazards of Love.</p>
+     <p>Rolling Stone listed James among their "20 New Guitar Gods" along with fellow My Morning Jacket guitarist Carl Broemel. In 2008, James, along with former My Morning Jacket guitarist and cousin Johnny Quaid, formed Removador Recordings and Solutions record label. The label, as described on its website, functions "on the simple principal of yielding the highest annual percentage of aural joy back into the hearts and minds of investors and shareholders with ease and convenience". He contributed vocals on The Decemberists' 2009 album The Hazards of Love.</p>
 
   <h1>THE JIM JAMES BAND</h1>
-  
+
+  <div class="column">
+  <h2>GUITARS & KEYBOARDS</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+  </div>
+
+  <div class="column2">
+  <h2>DRUMS & PERCUSSION</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+  </div>
+
+
 </body>
 </html>
