change names of images alt text to be accurate

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>JIM JAMES</h1>
 
-  <img src="img/jimjames2.jpg" alt="jimjames" width="600" height="350">
+  <img src="img/jimjames2.jpg" alt="jimjames2" width="600" height="350">
 
   <div class="sidebar">
     <h2>Upcoming Shows</h2>
@@ -22,7 +22,7 @@
     <p>Prior to forming My Morning Jacket, James was the vocalist and guitarist of Month of  Sundays, currently known as Mont de Sundua. As the vocalist, frontman, producer and lead songwriter for My Morning Jacket, James has been instrumental in defining the sound of the band. He was given an "Esky" for best songwriter in Esquire's 2006 Esky Music Awards in the April issue.James typically plays rhythm guitar, acoustic guitar, and occasional lead guitar on My Morning Jacket songs. He played the role of the band leader in the Bob Dylan biopic I'm Not There, singing the song "Going to Acapulco", with Calexico as his backing band, which was featured on the soundtrack of the film.</p>
 
   <div class="float">
-    <img src="img/jimjames1.jpg" alt="jimjames" width="600" height="350">
+    <img src="img/jimjames1.jpg" alt="jimjames1" width="600" height="350">
   </div>
 
   <div class="sidebar2">
